platform/istio/mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: istio-system   # mesh-wide STRICT mTLS
spec:
  mtls:
    mode: STRICT
