platform/istio/primary-cluster.yaml
---
# Istio namespace
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    topology.istio.io/network: network1
