platform/istio/remote-cluster.yaml
---
# Istio namespace on REMOTE cluster
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    topology.istio.io/network: network2
